--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.13.3",
+    "postcss": "^8.4.49",
     "process": "^0.11.10",
+    "react-router-dom": "^7.1.1",
     "tailwindcss": "^3.4.17"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1"
   }
 }
