--- a/package.json
+++ b/package.json
@@ -7,22 +7,29 @@
     "build": "parcel build public/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abhinavranjan23/weather_report.git"
+  },
   "author": "Abhinav Ranjan",
   "license": "ISC",
-  "devDependencies": {
-    "parcel": "^2.13.3",
-    "postcss": "^8.4.49",
-    "process": "^0.11.10",
-    "react-router-dom": "^7.1.1",
-    "tailwindcss": "^3.4.17"
+  "bugs": {
+    "url": "https://github.com/abhinavranjan23/weather_report/issues"
   },
+  "homepage": "https://github.com/abhinavranjan23/weather_report#readme",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.28.1"
+  },
+  "devDependencies": {
+    "postcss": "^8.4.49",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.17"
   }
 }
