--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.0",
     "chart.js": "^4.4.7",
-    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -33,6 +32,7 @@
     "react-router-dom": "^6.28.1"
   },
   "devDependencies": {
+    "parcel": "^2.13.3",
     "postcss": "^8.4.49",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.17"
